--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Web Page 02</title>
         <link rel="shortcut icon" href="./imagenes/icono.webp" type="image/x-icon">
         <link rel="stylesheet" type="" href="estilos.css">
-        <script src="https://unpkg.com/boxicons@latest/dist/boxicons.js"></script>
+        <script src="./boxicons.js"></script>
 
     </head>
     <body>
@@ -162,7 +162,6 @@
                         <div class="testimony__conteiner">
             <img class="testimony__img" src="./imagenes/11.jpg" alt="">
                         </div>
-                        
                         <div class="testimony__copy">
                             <box-icon name='apple' type='logo' class='testimony__logo' ></box-icon>                       
                         <div class="testimony__info">
@@ -172,17 +171,18 @@
                       </div>
                     </div>
                     <div class="testimony__card">
-                        <div class="testimony__text">
-                             <img src="./imagenes/5.jpg" class="google__logo"></img>   
-                            <p class="testimony__history">
-                                Desde que empezamos a a trabajar druo, comenzamos a obtener resultados increibles. Ahora hemos lllegado a un mayor numero de clientes potenciales
-                            </p>
-                            <div class="testimony__copy testimony__copy--modifier">
-                                  <img src="./imagenes/8.jpg" alt="" class="testimony__logo testimony__picture"> 
-                                  <h3 class="testimony__name">Andres Garcia</h3>
-                                  <p class="testimony__position">Director de Apple</p>                                  
-                            </div>
+                        <div class="testimony__conteiner">
+            <img class="testimony__img" src="./imagenes/8.jpg" alt="">
                         </div>
+                        <div class="testimony__copy">
+                            <box-icon name='apple' type='logo' class='testimony__logo' ></box-icon>                       
+                        <div class="testimony__info">
+                            <h3 class="testimony__name">Andres Garcia</h3>
+                            <p class="testimony__position">Director de Apple</p>
+                        </div>
+                      </div>
+                    </div>
+
                     </div>
                </div>
             </section>
