--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <div class="container nav__container">
                         <div class="logo">
                             <h2 class="logo__name">
-                                Darco Corporation <span class="point">.</span>
+                                Darco Corporation
                             </h2>
                         </div>
                         <div class="links">
@@ -35,6 +35,7 @@
                 <img src="./imagenes/7.jpg" alt="" class="mockup">
             </section>
             </header>
+
             <section class="services">
                 <div class="container">
                     <h2 class="subtitle">
@@ -92,6 +93,7 @@
                     </article>
                 </div>
             </section>
+
             <section class="proyects container">
                 <h2 class="subtitle">Proyectos Recientes <span class="point">.</span></h2>
                 <p class="copy__section">Hemos colaborado con marcas reconocidas a nivel mundial</p>
@@ -140,6 +142,7 @@
                           </div>
                     </article>
             </section>
+
             <section class="testimony">
                     <div class="testimony__titulos1">
                         <h2 class="subtitle">Clientes Satisfechos <span class="point">.</span></h2>
